--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form-zod": "^0.3.0",
+    "react-icons": "^5.5.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
